deployments/traefik/traefik/authelia-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: traefik
spec:
  forwardAuth:
    address: http://authelia.default.svc.cluster.local:9091/api/verify?rd=https://login.perezmz.com
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
    trustForwardHeader: true
